# ring-flash-attention

./: LICENSE  README.md  benchmark_qkvpacked_func.py  pyproject.toml  raw_flash_attn.py  requirements.txt  ring_flash_attn.py  setup.py  test.py  test_qkvpacked_func.py  test_stripe_qkvpacked_func.py  test_varlen_qkvpacked_func.py  test_zigzag_qkvpacked_func.py  visualization.html
benchmark/: benchmark_kvpacked_func.py  benchmark_qkvpacked_func.py  benchmark_varlen_kvpacked_func.py  benchmark_varlen_qkvpacked_func.py
ds_attn/: ulysses_attn_layer.py  utils.py
ring_flash_attn/: __init__.py  comm.py  llama3_flash_attn_varlen.py  raw_flash_attn.py  ring_flash_attn.py  ring_flash_attn_qkvpacked.py  ring_flash_attn_qkvpacked_2.py  ring_flash_attn_varlen.py  ring_flash_attn_varlen_qkvpacked.py  stripe_flash_attn.py  stripe_flash_attn_qkvpacked.py  stripe_flash_attn_varlen.py  utils.py  zigzag_ring_flash_attn.py  zigzag_ring_flash_attn_qkvpacked.py  zigzag_ring_flash_attn_varlen.py  zigzag_ring_flash_attn_varlen_qkvpacked.py
ring_flash_attn/adapters/: __init__.py  hf_adapter.py
test/: test.sh  test_llama3_flash_attn_varlen_func.py  test_llama3_prepare_cu_seqlens.py  test_qkvpacked_func.py  test_ring_flash_attn_func.py  test_ring_flash_attn_varlen_func.py  test_stripe_flash_attn_func.py  test_stripe_flash_attn_varlen_func.py  test_triton_kernels.py  test_ulysses_attn.py  test_zigzag_ring_flash_attn_func.py  test_zigzag_ring_flash_attn_varlen_func.py  test_zigzag_varlen_qkvpacked_func.py  utils.py
