[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ring-flash-attn"
version = "0.1.1"
authors = [
  { name="zhuzilin", email="zhuzilinallen@gmail.com" },
]
description = "Ring attention implementation with flash attention."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zhuzilin/ring-flash-attention"
Issues = "https://github.com/zhuzilin/ring-flash-attention/issues"